# rhythmic-segment-analysis

./: .env  .gitignore  LICENSE  LICENSE.figures  README.md  pyproject.toml
data/: iemp-css-metadata.csv  synthetic-intervals.json
notebooks/: cluster-analysis.ipynb  coordinate-transform.ipynb  flat-ratio-plot.ipynb  iemp-css.ipynb  plot-types.ipynb  synthetic-data.ipynb
scores/: repeated-rhythm.mscz
scores/.mscbackup/: .repeated-rhythm.mscz~
src/: cluster.py  helvetica.mplstyle  iemp_css.py  patdur.py  plotting.py  raster.py  synthetic.py  utils.py
tex/: .latexmkrc  rsa-2d-simplex.tex  rsa-3d-simplex.tex  supplements.tex
tex/jjm-paper/: references.bib  rsa-paper-anonymous.tex  rsa-paper.tex  tMAM2e.cls
tex/jmm-supplements/: rsa-supplements.tex  tMAM.bst
tex/rsa/: README.md  rsa-2d.sty  rsa-3d.sty  rsa-common.sty
